--- a/portfolio_style.css
+++ b/portfolio_style.css
@@ -102,7 +102,7 @@ section{
 #home{
     width:100%;
     height:100vh;
-    background:url(Attachments/computer-image.JPG);
+    background:url(computer-image.JPG);
     background-repeat: no-repeat;
     background-size: 50%;
     background-position: center;
